chore: CrupdateUser to UpdateUser
